[package]
name = "asserhttp"
version = "0.5.0"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Fluent http response assertions"
homepage = "https://github.com/beltram/asserhttp"
repository = "https://github.com/beltram/asserhttp"
license = "Apache-2.0"
keywords = ["test", "http", "client", "actix", "reqwest"]
categories = ["development-tools::testing", "api-bindings", "web-programming::http-client"]

include = ["/src/*", "/tests/*", "/Cargo.toml"]

[dependencies]
anyhow = { version = "1.0.57", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
regex = { version = "1.5.6", features = ["std", "unicode"], default-features = false }
http-types = { version = "2.12.0", default-features = false }
surf = { version = "2.3.2", features = ["curl-client"], optional = true, default-features = false }
isahc = { version = "1.7.2", features = ["json", "text-decoding"], optional = true, default-features = false }
reqwest = { version = "0.11.10", features = ["json", "blocking"], optional = true, default-features = false }
hyper = { version = "0.14.19", features = ["client"], optional = true, default-features = false }
awc = { version = "3.0.0", optional = true, default-features = false }
actix-http = { version = "3.0.4", optional = true, default-features = false }
actix-web = { version = "4.0.1", optional = true, default-features = false }
rocket = { version = "0.5.0-rc.2", optional = true, default-features = false }
ureq = { version = "2.4.0", optional = true, default-features = false }
itertools = { version = "0.10.3", optional = true, default-features = false }
axum = { version = "0.5.7", features = ["json"], optional = true, default-features = false }
futures-lite = { version = "1.12.0", features = ["std"], optional = true, default-features = false }

[dev-dependencies]
asserhttp = { path = ".", features = ["surf", "isahc", "reqwest", "hyper", "actix", "actix-web-client", "rocket", "ureq", "axum"] }
actix-web = { version = "4.0.1", features = ["macros"], default-features = false }
stubr = "0.4.14"
serde_json = "1.0.81"
async-std = { version = "1.11.0", features = ["attributes"] }
tokio = { version = "1.19.2", features = ["macros"] }
pin-project = "1.0.10"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
paste = "1.0.7"
tower-http = "0.3.4"
tower = { version = "0.4.12", features = ["util"] }

[features]
default = []
actix = ["actix-http", "actix-web"]
actix-web-client = ["awc", "actix-http/ws", "futures-lite"]
ureq = ["dep:ureq", "itertools"]
axum = ["dep:axum", "futures-lite"]
hyper = ["dep:hyper", "futures-lite"]
isahc = ["dep:isahc", "futures-lite"]
reqwest = ["dep:reqwest", "futures-lite"]
rocket = ["dep:rocket", "futures-lite"]
surf = ["dep:surf", "futures-lite"]

[profile.dev]
# improves compilation performances on macos
split-debuginfo = "unpacked"