[package]
name = "asserhttp"
version = "0.6.1"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Fluent http response assertions"
homepage = "https://github.com/beltram/asserhttp"
repository = "https://github.com/beltram/asserhttp"
license = "Apache-2.0"
keywords = ["test", "http", "client", "actix", "reqwest"]
categories = ["development-tools::testing", "api-bindings", "web-programming::http-client"]

include = ["/src/*", "/tests/*", "/Cargo.toml"]

[build-dependencies]
tonic-build = "0.10"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
regex = { version = "1.7", features = ["std", "unicode"], default-features = false }
http-types = { version = "2.12", default-features = false }
surf = { version = "2.3", features = ["curl-client"], optional = true, default-features = false }
isahc = { version = "1.7", optional = true, default-features = false }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true, default-features = false }
hyper = { version = "0.14", features = ["client"], optional = true, default-features = false }
awc = { version = "3.0", optional = true, default-features = false }
actix-http = { version = "3.2", optional = true, default-features = false }
actix-web = { version = "4.2", optional = true, default-features = false }
rocket = { version = "0.5.0-rc.2", optional = true, default-features = false }
ureq = { version = "2.5", optional = true, default-features = false }
itertools = { version = "0.12", optional = true, default-features = false }
axum = { version = "0.6", features = ["json"], optional = true, default-features = false }
futures-lite = { version = "2.0", features = ["std"], optional = true, default-features = false }
assert-json-diff = "2.0"
tonic = { version = "0.9", optional = true, default-features = false }
thiserror = { version = "1.0" }

[dev-dependencies]
asserhttp = { path = ".", features = ["surf", "isahc", "reqwest", "hyper", "actix", "actix-web-client", "rocket", "ureq", "axum", "tonic", "internal", "fallible"] }
actix-web = { version = "4.2", features = ["macros"], default-features = false }
stubr = "0.6"
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
tokio = { version = "1.19", features = ["macros"] }
pin-project = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
paste = "1.0"
tower-http = "0.4"
tower = { version = "0.4", features = ["util"] }
tonic = { version = "0.9", features = ["codegen"] }
prost = "0.11"

[features]
default = []
fallible = []
actix = ["actix-http", "actix-web"]
actix-web-client = ["awc", "actix-http/ws", "futures-lite"]
ureq = ["dep:ureq", "itertools/use_alloc"]
axum = ["dep:axum", "futures-lite"]
hyper = ["dep:hyper", "futures-lite"]
isahc = ["dep:isahc", "futures-lite"]
reqwest = ["dep:reqwest", "futures-lite"]
rocket = ["dep:rocket", "futures-lite"]
surf = ["dep:surf", "futures-lite"]
tonic = ["dep:tonic", "grpc"]
grpc = []
internal = []

[profile.dev]
# improves compilation performances on macos
split-debuginfo = "unpacked"